--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -2,4 +2,20 @@
 <resources>
     <string name="app_name">Как я вижу это</string>
     <string name="n_hello_world">Тут написано:\nМы студенты БТПИТ! вместо Hello, World</string>
+    <string name="happened_next">А вот что было дальше Мы с вами сейчас и узнаем</string>
+    <string name="poem">Воскресенье 22 июня 1941 г.\n
+Мирно страна проснулась\n
+В этот июньский день,\n
+Только что распустилась\n
+В сквере её сирень.\n
+Радуясь солнцу и миру,\n
+Утро встречала Москва.\n
+Вдруг разнеслись по эфиру\n
+Памятные слова...\n
+Голос уверенно — строгий\n
+Сразу узнала страна.\n
+Утром у нас на пороге\n
+Заполыхала война.\n
+Н.Сидоренко</string>
+    <string name="Sunday_June_22_1941">Воскресенье 22 июня 1941 г.</string>
 </resources>
