--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,21 @@
 <resources>
     <string name="app_name">How I see it</string>
     <string name="n_hello_world">It says here:\nWe are studying at BTPIT! instead of Hello, World</string>
+    <string name="happened_next">And here\'s what happened next, we\'ll find out now</string>
+    <string name="can_t_open_image" translatable="false">Can\'t open Image</string>
+    <string name="poem">Sunday, June 22, 1941\n
+The country has woken up peacefully\n
+On this June day,\n
+It just opened\n
+Her lilacs are in the park.\n
+Rejoicing in the sun and the world,\n
+Moscow greeted the morning.\n
+Suddenly they spread across the airwaves\n
+Memorable words...\n
+the voice is confident and strict\n
+The country recognized it immediately.\n
+On our doorstep in the morning\n
+The war broke out.\n
+N. Sidorenko</string>
+    <string name="Sunday_June_22_1941">Sunday, June 22, 1941</string>
 </resources>
