--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -3,19 +3,21 @@
     <string name="app_name">Как я вижу это</string>
     <string name="n_hello_world">Тут написано:\nМы студенты БТПИТ! вместо Hello, World</string>
     <string name="happened_next">А вот что было дальше Мы с вами сейчас и узнаем</string>
-    <string name="poem">Воскресенье 22 июня 1941 г.\n
-Мирно страна проснулась\n
-В этот июньский день,\n
-Только что распустилась\n
-В сквере её сирень.\n
-Радуясь солнцу и миру,\n
-Утро встречала Москва.\n
-Вдруг разнеслись по эфиру\n
-Памятные слова...\n
-Голос уверенно — строгий\n
-Сразу узнала страна.\n
-Утром у нас на пороге\n
-Заполыхала война.\n
-Н.Сидоренко</string>
-    <string name="Sunday_June_22_1941">Воскресенье 22 июня 1941 г.</string>
+    <string name="poem"> Мы долго жили и свыклись с тем, что в мире у нас спокойно всё, давно не было апокалипсисов, многие даже перестали верить в них, мы начали забывать наших героев, ради которых мы и живём
+\n Как сказал один великий Cкелетос:“Не спеши, а то успеешь”, его слова тоже были восприняты в шутку, но зря зря зря… Ведь он один знал, что будет с нами в конце, и откуда мы в начале
+\n И вот спустя столько лет, они вернулись, вот они все, с лева на право:
+        \n Чел в синем (ээЭЭ)
+        \n Гусар (Я настоящий, а другие фейки)
+        \n Санчоус (Щас Gost Exicle запустит)
+        \n Никитосус (даже не узнал с начал)
+        \n Данилус
+        \n Олегус (Он такой типа what)
+        \n Лёшкус (я промолчу)
+        \n СКЕЛЕТОС (АААА ООООО ну тут тип рил крутой)
+        \n Лёшкус 2х (Ну он моблу скачал)
+        \n СлипиЖека (Вечно спит)
+</string>
+    <string name="Sunday_June_22_1941">ОНИ ВЕРНУЛИСЬ!!!</string>
+    <string name="date">Только что</string>
+
 </resources>
