--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@ On our doorstep in the morning\n
 The war broke out.\n
 N. Sidorenko</string>
     <string name="Sunday_June_22_1941">Sunday, June 22, 1941</string>
+    <string name="date">22 июня 1941 04:01</string>
 </resources>
