--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name">Как я вижу это</string>
     <string name="n_hello_world">Тут написано:\nМы студенты БТПИТ! вместо Hello, World</string>
     <string name="happened_next">А вот что было дальше Мы с вами сейчас и узнаем</string>
-    <string name="poem">
+    <string name="content_post">
         Мы долго жили и свыклись с тем, что в мире у нас спокойно всё, давно не было апокалипсисов, многие даже перестали верить в них, мы начали забывать наших героев, ради которых мы и живём
         \n Как сказал один великий Cкелетос:“Не спеши, а то успеешь”, его слова тоже были восприняты в шутку, но зря зря зря… Ведь он один знал, что будет с нами в конце, и откуда мы в начале
         \n И вот спустя столько лет, они вернулись, вот они все, с лева на право:
@@ -18,8 +18,8 @@
         \n Лёшкус 2х (Ну он моблу скачал)
         \n СлипиЖека (Вечно спит)
     </string>
-    <string name="Sunday_June_22_1941">ОНИ ВЕРНУЛИСЬ!!!</string>
-    <string name="date">Только что</string>
+    <string name="header_post">ОНИ ВЕРНУЛИСЬ!!!</string>
+    <string name="dataTime_post">Только что</string>
     <string name="more_billion">более млрд</string>
 
 </resources>
