--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="n_hello_world">It says here:\nWe are studying at BTPIT! instead of Hello, World</string>
     <string name="happened_next">And here\'s what happened next, we\'ll find out now</string>
 
-    <string name="poem">Sunday, June 22, 1941\n
+    <string name="content_post">Sunday, June 22, 1941\n
 The country has woken up peacefully\n
 On this June day,\n
 It just opened\n
@@ -19,8 +19,8 @@ The country recognized it immediately.\n
 On our doorstep in the morning\n
 The war broke out.\n
 N. Sidorenko</string>
-    <string name="Sunday_June_22_1941">Sunday, June 22, 1941</string>
-    <string name="date">22 июня 1941 04:01</string>
+    <string name="header_post">Sunday, June 22, 1941</string>
+    <string name="dataTime_post">22 июня 1941 04:01</string>
     <string name="more_billion">more than a billion</string>
 
 </resources>
