--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -7,5 +7,6 @@
     <string name="header_post">ОНИ ВЕРНУЛИСЬ!!!</string>
     <string name="dataTime_post">Только что</string>
     <string name="more_billion">более млрд</string>
+    <string name="delete">Удалить</string>
 
 </resources>
