--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="dataTime_post">22 июня 1941 04:01</string>
     <string name="more_billion">more than a billion</string>
     <string name="delete">Delete</string>
+    <string name="todo">TODO</string>
 
 </resources>
